--- a/docs/changelog/2.5.x.md
+++ b/docs/changelog/2.5.x.md
@@ -1,14 +1,14 @@
-# 2.5.0 ~ 2.5.2 版本日志
+# 🚀 2.5.0 ~ 2.5.2 版本日志
 
 # 2.5.2
 
-### 新增功能
+### 🐣 新增功能
 
 1. 【agent+server】 新增节点批量升级功能（注意，之前的节点版本不支持该功能需要升级当前版本后才能使用该功能）
 2. 【server】节点配置的超时时间单位由毫秒改为秒，并且最小值为2秒
 3. 【server】新增构建合并分支日志（便于判断分支冲突问题）
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 【server】fix bug:
    分发列表页面，展开某个节点之后点击操作按钮会出现新的一行无效数据。[点击查看提交记录](https://gitee.com/dromara/Jpom/commit/e28b14bcf3dce402ce170a40f9bb93c4d25d0935) [@Hotstrip](https://gitee.com/hotstrip)
@@ -36,7 +36,7 @@
 
 # 2.5.1
 
-### 新增功能
+### 🐣 新增功能
 
 1. 【Server】保存邮箱信息时候验证邮箱配置是否正确（感谢@maybe）
 2. 【Server】Token 机制采用 jwt
@@ -47,7 +47,7 @@
 7. 【Server】访问 ip 限制，支持配置白名单和黑名单来控制 ip 访问权限
 8. 【Server】添加服务自启动脚本创建方案，下面贴一下 Server 端自启动方式：
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 【Server】全局网络请求新增 loading 状态控制
 2. 【Server】获取构建日志关闭 loading 状态
@@ -72,7 +72,7 @@
 20. 【server】优化表格的排版和高度等样式，适配页面。详情见 [issue](https://gitee.com/dromara/Jpom/issues/I3EE2R)
 20. 【server】优化节点分发关联操作界面。
 
-> 注意事项：
+> ⚠️ 注意事项：
 > 1. ssh 终端的删除命令检查临时取消（后面版本会重新优化）
 > 2. 该版本新增配置 Jpom 服务方式，需要更新 Server.sh、Agent.sh 文件，在线升级仅升级应用程序不会升级对应的管理命令文件，如果需要使用到该功能还需要手动覆盖更新对应的文件。（如果自定义过管理命令文件则需要差异覆盖）
 
@@ -90,12 +90,12 @@
 
 # 2.5.0
 
-### 新增功能
+### 🐣 新增功能
 
 1. 【server】接入全局 loading 控件
 2. 【server】默认进入新版UI
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 【Server】fix bug: ssh 列表页面编辑弹窗无法加载（当没有设置文件目录时）
 2. 【Server】fix bug: 分发列表，项目运行状态显示错误
@@ -112,4 +112,4 @@
 13. 【server】add: File方式创建项目 项目控制台互调（感谢@李道甫 贡献）
 13. 【server】add: 分发提示修改 分发项目显示 （感谢@李道甫 贡献）
 
-> 注意：目前新版本登录状态采用固定 token 模式，登录后将一直保持在线状态，如需要退出或者离线需要进行退出登录操作。（该问题将于后面版本进行优化调整）
+> ⚠️ 注意：目前新版本登录状态采用固定 token 模式，登录后将一直保持在线状态，如需要退出或者离线需要进行退出登录操作。（该问题将于后面版本进行优化调整）
