--- a/docs/changelog/2.3.x.md
+++ b/docs/changelog/2.3.x.md
@@ -1,8 +1,8 @@
-# 2.3.1 ~ 2.3.2 版本日志
+# 🚀  2.3.1 ~ 2.3.2 版本日志
 
 # 2.3.2
 
-### 新增功能
+### 🐣 新增功能
 
 1. 控制台日志支持配置保留天数
 2. 项目列表状态跟随控制台刷新
@@ -17,7 +17,7 @@
 11. Jpom管理命令新增判断`JAVA_HOME`环境变量
 12. 修改用户信息，在线用户需要重新登录
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 修改WebHooks 不生效
 2. 初始化系统白名单初始化失败(感谢@洋芋)
@@ -33,7 +33,7 @@
 
 # 2.3.1
 
-#### 新增功能
+### 🐣 新增功能
 
 1. 添加创建项目判断项目id是否被占用
 2. 项目列表中添加悬停突出显示效果
@@ -45,7 +45,7 @@
 8. Jpom启动成功会自动在数据目录中创建进程id信息文件如`pid.27936`
 9. 证书管理支持导出、查看代码模板功能
 
-#### 解决BUG
+#### 🐞 解决BUG
 
 1. 解决配置JVM、ARGS时，不能获取到程序运行信息bug(感谢@Agoni 、)
 2. 减少登录图形验证码干扰线(感谢@Mark)
@@ -54,7 +54,7 @@
 4. 优化JDK32位和64位冲突时自动跳过(感谢@13145597)
 5. 用户授权项目权限不足问题
 
-#### 升级注意事项
+#### ⚠️ 升级注意事项
 
 1. 由2.2及以下升级到 2.3.x 需要手动删除Jpom数据目录中的`data/user.json` 文件、所有用户账户信息将失效需要重新添加
 
