--- a/docs/changelog/2.4.x.md
+++ b/docs/changelog/2.4.x.md
@@ -1,11 +1,11 @@
-# 2.4.0 ~ 2.4.9 版本日志
+# 🚀  2.4.0 ~ 2.4.9 版本日志
 
 
 # 2.4.9 - 3.0.0(beta)
 
 > 当前版本为重构页面后的预览版本
 
-### 新增功能
+### 🐣 新增功能
 
 1. 【Server】新增监控用户操作记录
 2. 【Agent】新增配置是否禁用根据jmx获取项目状态（默认启用）
@@ -13,7 +13,7 @@
 4. 3.0.0bata版本的页面重构[采用vue项目编写]（感谢@Hotstrip）
 5. 新增项目启动banner输出（感谢@Hotstrip）
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 【Server】 优化判断构建命令中的删除命令关键词
 2. 【Server】 优化删除构建历史、构建代码（避免不能删除情况）
@@ -27,7 +27,7 @@
 10. 更新hutool 版本至5.4.x （能避免系统缓存页面里面获取文件大小卡死）
 11. 调整Jpom启动输出日志,启动消息采用控制台输出不再打印error级别的启动消息
 
-> 特别感谢：@Hotstrip 对Jpom的前端页面采用vue重构编写
+> 🙏 特别感谢：@Hotstrip 对Jpom的前端页面采用vue重构编写
 >
 > 当前版本为3.x版本前的过渡版本
 
@@ -35,11 +35,11 @@
 
 # 2.4.8
 
-### 新增功能
+### 🐣 新增功能
 
 1. 【Agent】读取进程新增 `ps -ef | grep xxx` 方式（感谢@JAVA-落泪归枫）
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 【Server】构建历史中记录字段不全问题（感谢@￡天空之城～龙）
 2. 【Server】Java-WebSocket 模块漏洞版本更新 来源 [Github GHSA-gw55-jm4h-x339](https://github.com/advisories/GHSA-gw55-jm4h-x339)
@@ -56,7 +56,7 @@
 
 # 2.4.7
 
-### 新增功能
+### 🐣 新增功能
 
 1. [支持maven快速编辑节点项目](https://gitee.com/keepbx/Jpom-Plugin/tree/master/jpom-maven-plugin) （配合`jpom-maven-plugin`使用）(
    感谢@夜空中最亮的星)
@@ -68,7 +68,7 @@
 7. 【Agent】 项目新建副本集，方便单机快速运行多个副本
 8. 【Server】构建发布后操作支持副本集相关操作
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 完善使用nginx之类代理二级目录，指定端口路径跳转问题（感谢@😯😨😰😱 ）
 2. 解决菜单路径不正确问题（GITEE@I15O46）
@@ -81,20 +81,20 @@
 9. 补充说明文档：[详情](https://jpom-site.keepbx.cn/docs/index.html#/) (感谢@TXpcmgr（Geiger）)
 10. 更新部分插件依赖版本【hutool、fast-boot、fastjson】
 
-> 注意：如果在2.4.7以下项目运行方式中使用过【War】模式的由于【War】更名为【JarWar】 所有在升级后请重新修改运行方式后再运行对应项目
+>  ⚠️ 注意：如果在2.4.7以下项目运行方式中使用过【War】模式的由于【War】更名为【JarWar】 所有在升级后请重新修改运行方式后再运行对应项目
 
 -----------------------------------------------------------
 
 # 2.4.6
 
-### 新增功能
+### 🐣 新增功能
 
 1. 【Agent】 nginx管理支持自定义编译运行，管理方式变更
 2. 【Server】 监控通知新增企业微信（感谢@TinyBao。）
 3. 管理脚本支持自动识别环境变量和java路径（linux环境）
 4. 项目类型新增File(快速管理纯静态文件)
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 【Server】解决分发列表项目状态显示不正确（感谢@群友）
 2. 【Server】修复权限选择错乱和无法正确过滤问题【注意此版本的角色动态权限不兼容旧数据，需要重新授权动态数据权限】（感谢@Java-OutMan）
@@ -116,7 +116,7 @@
 
 # 2.4.5
 
-### 新增功能
+### 🐣 新增功能
 
 1. 【Server】节点列表支持筛选（感谢@￡天空之城～龙）
 2. 【Server】新增构建触发器（感谢@java 麦田英雄）
@@ -128,7 +128,7 @@
 8. 新增节点内存、cpu、硬盘使用情况采集报表（感谢@￡天空之城～龙）
 9. 节点首页新增快速结束进程方式
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 【Server】节点分发需要节点数大于二（感谢@Sawyer）
 2. 修复未加载到tools.jar判断（感谢@java-磊）
@@ -148,11 +148,11 @@
 
 # 2.4.4
 
-### 新增功能
+### 🐣 新增功能
 
 1. 【Agent】添加对SpringBoot war包支持
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 【Server】新项目打开项目控制台页面报错（感谢@黄战虎）
 2. 【Server】修改邮箱不及时生效问题（感谢@WeChat）
@@ -165,7 +165,7 @@
 
 # 2.4.3
 
-### 新增功能
+### 🐣 新增功能
 
 1. SpringBoot 升级到2.1.x
 2. 【Server】velocity模板引擎升级为thymeleaf
@@ -183,7 +183,7 @@
 14. 新增ssh快速部署插件端
 15. 新增一键安装脚本[详情](https://gitee.com/dromara/Jpom/#%E4%B8%80%E9%94%AE%E5%AE%89%E8%A3%85)
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 【Server】未登录重定向带入参数
 2. 【Server】页面登录方法调整支持自定义事件登录
@@ -211,7 +211,7 @@
 
 # 2.4.2
 
-### 新增功能
+### 🐣 新增功能
 
 1. 新增实时查看tomcat日志
 2. 【Server】分发包支持更多压缩格式
@@ -229,7 +229,7 @@
 14. 在线查看、下载Jpom运行日志(windows不能实时查看)
 15. 新增linux在线升级
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 【Agent】logBack页面最后修改时间不能正确显示（感谢@JAVA jesion）
 2. 【Agent】nginx修改内容截断，不正确情况（感谢@JAVA jesion）
@@ -259,7 +259,7 @@
 
 # 2.4.1
 
-### 新增功能
+### 🐣 新增功能
 
 1. 【Agent】新增线程列表监控(感谢@其锋)
 2. 【Agent】新增节点脚本模板(感谢@其锋)
@@ -269,7 +269,7 @@
 6. 【Agent】导入项目包时指出多压缩包[tar|bz2|gz|zip|tar.bz2|tar.gz] (感谢@群友)
 7. 【Agent】新增配置控制台日志文件编码格式（详情查看extConfig.yml）
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 【Server】节点首页，右上角管理路径错误(感谢@其锋)
 2. 【Server】查看用户操作日志支持筛选用户
@@ -285,7 +285,7 @@
 
 # 2.4.0
 
-### 新增功能
+### 🐣 新增功能
 
 1. 首页进程列表显示属于Jpom项目名称(感谢@〓下页)
 2. 多节点统一管理（插件模式）
@@ -293,7 +293,7 @@
 4. 新增记录用户操作日志[采用H2数据库]（感谢@〓下页）
 5. 节点分发功能、合并管理项目(感谢@其锋)
 
-### 解决BUG、优化功能
+### 🐞 解决BUG、优化功能
 
 1. 解析端口信息兼容`:::8084`(感谢@Agoni 、)
 2. 进程id解析端口、解析项目名称带缓存
